# bedrock-dining-agent

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cloud_proxy.py  deploy.sh  pyproject.toml  requirements.txt
bedrock-dining-agent/frontend/: .env.example  package.json
bedrock-dining-agent/frontend/src/: App.tsx  index.css
bedrock-dining-agent/frontend/src/components/: BillCalculator.tsx  EndpointSwitcher.tsx  InsightsChart.tsx  Layout.tsx  LoadingSpinner.tsx  ReservationForm.tsx  ReservationStatus.tsx  RestaurantCard.tsx  RestaurantDetails.tsx  RestaurantMap.tsx  SearchFilters.tsx
bedrock-dining-agent/frontend/src/pages/: HomePage.tsx
bedrock-dining-agent/frontend/src/services/: api.ts
bedrock-dining-agent/frontend/src/types/: index.ts
bedrock-dining-agent/frontend/src/utils/: formatters.ts
